# Wisteria-Dataviz

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .typos.toml  AGENTS.md  Axes.md  BarChart.md  BuildingData.md  CMakeLists.txt  CMakeListsW3.2.txt  CMakeListsWX3.3.txt  Colors.md  Exporting.md  Features.md  Gallery.md  HiDPI.md  Images.md  ImportingData.md  LICENSE  Labels.md  Printing.md  README.md  Release.md  ReportBuildingJSON.md  Setup.md  TransformingData.md  action.yml  adding-pie-style.md  adding_box_effect.md  bar-chart.md  colors.md  features.md  gallery.md  importing-data.md  labels.md  printing.md  release.md  (+1 more)
.claude/: CLAUDE.md  settings.json
.claude/commands/: code-review.md  doc-review.md  license-check.md  review.md
.gemini/: settings.json
.github/scripts/: clang_tidy_html_report.py
.github/workflows/: clang-doc.yml  clang-format-check.yml  clang-static-analyzer.yml  clang-tidy-check.yml  clang-tidy.yml  cmake.yml  cppcheck.yml  doxygen.yml  i18n-check.yml  macos-build.yml  msbuild.yml  msvc.yml  newlines-check.yml  profanity-check.yml  spell-check.yml  typos.yml  ubuntu-build.yml  unit-tests.yml  unix build.yml  unix-build.yml
cmake/: ListFiles.cmake  folders.cmake
cmake/includes/: appfiles.cmake  guilibfiles_testing.cmake  guitestfiles.cmake  libfiles.cmake  resfiles.cmake  testfiles.cmake  wxpdf.cmake
datasets/: Company Acquisition.csv  First-Year Osprey.csv  Graph Library Survey.csv  Junior Osprey.csv  Performance Reviews.csv  Spelling Grades.csv  Student Scores.csv
datasets/Economics/: ERP Migration Survey.csv  Silver Futures.csv
datasets/Institutional Research/: Junior & Senior Majors (Top 20).csv  Program Awards.csv  Sense of Belonging.csv
datasets/Tables/: Program Awards.csv
datasets/economics/: company_acquisition.csv
datasets/historical/: titanic.csv
datasets/institutional_research/: fall_enrollment.csv  hs_graduate_matriculation.csv
datasets/social/: friends descriptions.csv
demo/: demo.cpp  demo.h
docs/: adding-shape.md  axes.md  bar-chart.md  building-data.md  colors.md  images.md  importing-data.md  labels.md  serialization.md  setup.md  transforming-data.md
docs/Syntax Manual/: 01-Project.Rmd  02-Constants.Rmd  03-Datasets.Rmd  04-Pages.Rmd  05-PageItems.Rmd  06-BaseGraphs.Rmd  06-Graphs.Rmd  07-BaseGraphs.Rmd  07-Graphs.Rmd  08-BaseProperties.Rmd  09-CommonProperties.Rmd  JSON Manual.Rproj  README.md  _output.yml  index.Rmd
docs/doxygen/: Doxyfile  other.css
docs/syntax-manual/: _quarto.yml  constants.qmd  datasets.qmd  graphs-base-level.qmd  graphs-properties.qmd  graphs.qmd  index.qmd  manual-cover.xcf  notes.qmd  page-items.qmd  pages.qmd  project.qmd
docs/syntax_manual/: 03-Datasets.Rmd  06-Graphs.Rmd  08-Notes.Rmd  32-Datasets.Rmd  33-PageItems.Rmd  34-Graphs.Rmd  _output.yml  datasets.qmd  index.Rmd  page-items.qmd
locale/: es.po
src/: axis.cpp  axis.h  barchart.cpp  barchart.h  boxplot.cpp  boxplot.h  candlestickplot.cpp  candlestickplot.h  canvas.cpp  canvas.h  categoricalbarchart.cpp  categoricalbarchart.h  colorbrewer.cpp  colorbrewer.h  dataset.cpp  dataset.h  ganttchart.cpp  ganttchart.h  graph2d.cpp  graph2d.h  graphitems.cpp  graphitems.h  heatmap.cpp  heatmap.h  histogram.cpp  histogram.h  image.cpp  image.h  label.cpp  label.h  likertchart.cpp  likertchart.h  lineplot.cpp  lineplot.h  lines.cpp  lines.h  piechart.cpp  piechart.h  settings.h  spacer.h  (+3 more)
src/app/: appsettings.cpp  appsettings.h  wisteriaapp.cpp  wisteriaapp.h  wisteriadoc.cpp  wisteriadoc.h  wisteriaview.cpp  wisteriaview.h
src/base/: axis.cpp  axis.h  brushes.cpp  brushes.h  canvas.cpp  canvas.h  changers.h  colorbrewer.cpp  colorbrewer.h  colorlookup.cpp  colorlookup.h  colors.cpp  colors.h  commonaxisbuilder.cpp  commonaxisbuilder.h  currencyformat.h  enums.h  fillableshape.cpp  fillableshape.h  graphitems.cpp  graphitems.h  icons.cpp  icons.h  image.cpp  image.h  label.cpp  label.h  lines.cpp  lines.h  pdfreportprintout.cpp  pdfreportprintout.h  points.cpp  points.h  polygon.cpp  polygon.h  report_builder_forumulas.cpp  reportbuilder.cpp  reportbuilder.h  reportbuildercolors.cpp  reportenumconvert.h  (+28 more)
src/codeeditor/: codeeditor.cpp  codeeditor.h
src/data/: clone.cpp  clone.h  dataset.cpp  dataset.h  excelreader.cpp  excelreader.h  jitter.h  join.cpp  join.h  join_inner.cpp  join_inner.h  join_left.cpp  join_left.h  odsreader.cpp  odsreader.h  pdfreader.cpp  pdfreader.h  pivot.cpp  pivot.h  subset.cpp  subset.h  (+2 more)
tests/: CMakeLists.txt  basetests.cpp  chartraitstests.cpp  colortests.cpp  comparedoublestests.cpp  cppparsetests.cpp  datatests.cpp  docparsetests.cpp  docxparsetests.cpp  evenoddtests.cpp  geometrytests.cpp  hhcimporttests.cpp  htmlencodetests.cpp  htmlimporttests.cpp  idlparsetests.cpp  intsplittests.cpp  labeltests.cpp  listctrlextests.cpp  mapstests.cpp  mdparsetests.cpp  odsimporttests.cpp  odtparsetests.cpp  pdfimporttests.cpp  postscriptimporttests.cpp  pptxparsetests.cpp  roundtest.cpp  rtfencodetests.cpp  rtfparsetests.cpp  safemathtests.cpp  sidebartests.cpp  statstests.cpp  stringutiltests.cpp  subsettests.cpp  tagfiltertests.cpp  testableframe.cpp  testingmain.cpp  textextracttests.cpp  textimporttests.cpp  textstreamtests.cpp  truncatetests.cpp  (+2 more)
tests/PREFast/: CMakeLists.txt  wdvprefast.cpp
tests/gui-tests/: CMakeLists.txt  basetests.cpp  clipboardtests.cpp  clonetests.cpp  colortests.cpp  datatests.cpp  fileutiltests.cpp  formattedtexttests.cpp  imagetests.cpp  jittertests.cpp  jointests.cpp  labeltests.cpp  listctrlextests.cpp  memmaptests.cpp  pdfreadertests.cpp  pivottests.cpp  polygontests.cpp  sidebartests.cpp  subsettests.cpp  testableframe.h  testingmain.cpp  testzip.cpp  textclassifytests.cpp  textstreamtests.cpp  xmlformattests.cpp
tests/gui-tests/test_files/: fileutiltests.cpp  listctrlextests.cpp  subsettests.cpp
tools/: Build CMake Files List.R  Build Color List.R  Colors.txt  build_cmake_files_list.R  build_color_list.R  files.cmake  guilibfiles_testing.cmake  guitestfiles.cmake  libfiles.cmake  libfiles_testing.cmake  testfiles.cmake
(+402 files in other folders)
